# api-testing-workshop

./: .gitignore  README.md  app.py  openapi.yaml  pyproject.toml
cdk/: cdk_stack.py
lambdas/create_friend/: handler.py
lambdas/get_all_friends/: handler.py
lambdas/shared/: output.py
localstack/: docker-compose.yaml  standup-stack.sh
scripts/: local_acceptance_test.py
tests/acceptance/: create_friends.feature  get_all_friends.feature
tests/acceptance/steps/: friends_steps.py
tests/unit/cdk/: test_cdk_stack.py
tests/unit/lambdas/create_friend/: test_handler.py
tests/unit/lambdas/get_all_friends/: test_handler.py
